fixed layout bugs

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,4 @@
 body{
-  background-image: url("../Images/MainBackground.png");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
@@ -220,15 +219,16 @@ button {
 
 #pOneProgressBar div {
   height: 100%;
-  line-height: 50px;
   width: 100px;
-  background: #DB2423;
+  margin: 0 auto;
+  background-color: #DB2423;
 }
 
 #pTwoProgressBar div {
   height: 100%;
   line-height: 50px;
   width: 100px;
+  margin: 0 auto;
   background-color: black;
 }
 
